# OpenGL-Tutorial

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat  run.bat
shader/: part10.frag  part10.vert  part13.vert  part6.frag  part6.vert  part7.vert  part8.vert
src/: main.cpp
src/YoutubeOpenGL002 - Triangle/: main.cpp
src/YoutubeOpenGL003 - Index Buffer/: main.cpp
src/YoutubeOpenGL004 - Organizing/: main.cpp  shader.cpp
src/YoutubeOpenGL005 - Shader/: VAO.h  main.cpp
src/YoutubeOpenGL006 - Texture/: main.cpp
src/YoutubeOpenGL007 - Going 3D/: main.cpp  shader.h
src/YoutubeOpenGL008 - Camera/: Camera.cpp  Camera.h  Texture.h  main.cpp
src/YoutubeOpenGL009 - Lightning/: main.cpp
src/YoutubeOpenGL010 - Specular Map/: Camera.h  main.cpp  shader.cpp
src/YoutubeOpenGL011 - Types of Light/: Texture.cpp  Texture.h  VAO.cpp  main.cpp
src/YoutubeOpenGL012 - Mesh/: Camera.cpp  Mesh.cpp  Texture.cpp  Texture.h  VBO.h  main.cpp
src/YoutubeOpenGL013 - Model Loading/: Camera.cpp  Camera.h  Mesh.cpp  Model.cpp  Model.h  Texture.cpp  Texture.h  main.cpp
